--- a/src/components/FloatingHelper/Helper.module.scss
+++ b/src/components/FloatingHelper/Helper.module.scss
@@ -7,7 +7,7 @@
     z-index: 9999;
     background-color: rgba(p.$primary, 0.5);
     margin: 0.5em;
-    border: p.$textColor solid 0.2px;
+    border: p.$textColor solid 1px;
     border-radius: 25cap;
     backdrop-filter: blur(25px);
 
